--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,11 +19,12 @@ dev_dependencies:
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
 # The following section is specific to Flutter.
-flutter:
+  flutter_localizations:
+    sdk: flutter
+  intl:
+  intl_translation:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
